backend/demo/src/main/java/com/example/demo/error/ExceptionNotNull.java
package com.example.demo.error;

public class ExceptionNotNull extends Exception{
    
    public ExceptionNotNull(String message) {
        super(message);
    }
}
